--- a/Lifter/app/build.gradle
+++ b/Lifter/app/build.gradle
@@ -26,9 +26,18 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    //noinspection GradleCompatible
+    compile 'com.android.support:appcompat-v7:26.+'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // adding libraries
+
+    //noinspection GradleCompatible
+    complie 'com.android.support:recyclerview-v7:26.+'
+    //noinspection GradleCompatible
+    compile 'com.android.support:cardview-v7:26.+'
 }
