--- a/Lifter/app/src/main/AndroidManifest.xml
+++ b/Lifter/app/src/main/AndroidManifest.xml
@@ -15,11 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ProgressGallery"
-            android:label="@string/title_activity_progress_gallery"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".ProgressActivity" />
+
+        <activity android:name=".progress.ProgressActivity" />
         <activity android:name=".SurveyActivity" />
         <activity android:name=".WorkoutActivity" />
         <activity android:name=".ChatActivity" />
