--- a/Lifter/app/build.gradle
+++ b/Lifter/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
-   // buildToolsVersion ''
+    // buildToolsVersion ''
 
     defaultConfig {
         applicationId "com.example.lifter"
@@ -28,7 +28,10 @@ android {
             }
         }
     }
+}
 
+repositories {
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -55,4 +58,5 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0' //https://github.com/PhilJay/MPAndroidChart
 }
