--- a/Lifter/app/build.gradle
+++ b/Lifter/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion '30.0.0 rc4'
+    buildToolsVersion '30.0.0'
 
     defaultConfig {
         applicationId "com.example.lifter"
