--- a/Lifter/app/src/main/AndroidManifest.xml
+++ b/Lifter/app/src/main/AndroidManifest.xml
@@ -17,11 +17,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MessageActivity"></activity>
+        <activity android:name=".MessageActivity"
+            android:parentActivityName=".ChatActivity"/>
         <activity android:name=".progress.ProgressActivity" />
         <activity android:name=".specific_exercise" />
         <activity android:name=".ListExercise" />
-        <activity android:name=".ProgressActivity" />
         <activity android:name=".GymBuddyFinderActivity" />
         <activity android:name=".GroupChatActivity" />
         <activity android:name=".SettingsActivity" />
